# coregtor-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml  setup.R
analysis/gtex_info/: stats.csv  stats.tex
analysis/parameter_selection/: config.csv
containers/: tcga.DockerFile  tcga.def  tools.DockerFile  tools.def
docs/: parameter_selection.md
experiments/: test1.json
experiments/analysis/: gene_lists.json  gtex.json  gtex_info.json  ps1.json  ps1_analysis.json  ps2.json  ps_cd_configs.csv
experiments/case_study/: ara1.json  evidence.json  mus.json
experiments/ps/: amy.json  analysis.json  bla.json  bld.json  cdn.json  hra.json  kdc.json  liv.json  lun.json  pit.json  ps_configs.csv  stm.json
experiments/ps1/: AMY.json  amy.json  ba9.json  bla.json  bld.json  bre.json  cdn.json  hra.json  hrv.json  hyp.json  kdc.json  liv.json  lun.json  mus.json  pit.json  stm.json  thy.json
experiments/ps2/: amy.json  bla.json  bld.json  cdn.json  hra.json  kdc.json  liv.json  lun.json  pit.json  stm.json
experiments/tools/: mus_coregnet.json  mus_coregnet_test.json  pan_coregnet.json
results/coregnet_mus/: default.csv  input.json
results/coregnet_pan/: default.csv  input.json
results/ps1_amy/: distance.csv  gene_frequency.csv  input.json  status.db
results/ps1_ba9/: distance.csv  gene_frequency.csv  input.json  status.db
results/ps1_bla/: distance.csv  gene_frequency.csv  input.json  status.db
results/ps1_bld/: distance.csv  gene_frequency.csv  input.json  status.db
tools/: coregnet.r  rtnduals.r  run_coregnet.py  run_rtnduals.py  util.py
(+121 files in other folders)
