[project]
name = "coregtor-benchmark"
version = "0.1.0"
description = "Benchmarking of co-regulatory modules predicted by CoRegTor tool"
authors = [
    {name = "SVJ"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
package-mode = false
dependencies = [
    "coregtor (==0.2.18)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
